--- a/angu17035/src/app/pages/admin/user-home/user-home.component.html
+++ b/angu17035/src/app/pages/admin/user-home/user-home.component.html
@@ -38,153 +38,16 @@
              
               <td>
                 <div class="flex gap-1 justify-center">
-                  <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editProduct" >
-                    <span>Sửa</span>
+                  <button class="btn btn-primary" >
+                    <span routerLink='{{userData._id }}'>Sửa</span>
                   </button>
-                  <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_prod" (click)="userDelete(userData.id)">
-                    <span>Xóa</span>
+                  <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete_prod" >
+                    <span (click)="userDelete(userData._id)">Xóa</span>
                   </button>
                 </div>
               </td>
             </tr>
           </tbody>
         </table>
-      </div>
-    
-      <div class="flex justify-end mr-5 mt-3">
-        <!-- <pagination-controls (pageChange)="p = $event"></pagination-controls> -->
-      </div>
-    </div>
-    
-    <!-- The Modal Short description -->
-    <div class="modal" id="short_description">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-body">Mô tả ngắn</div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- The Modal Description -->
-    <div class="modal" id="description">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-body">Mô tả dài</div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- The Modal Specifications -->
-    <div class="modal" id="specifications">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-body">Thông số kỹ thuật</div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- The Modal Edit Product -->
-    <div class="modal" id="editProduct">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <!-- Modal Header -->
-          <div class="modal-header">
-            <h4 class="modal-title">Chỉnh sửa thông tin sản phẩm</h4>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-    
-          <!-- Modal body -->
-          <div class="modal-body">
-            <form>Form thông tin sản phẩm</form>
-          </div>
-    
-          <!-- Modal footer -->
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#alert">
-              <span>Lưu</span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- The Modal Edit Product Success -->
-    <div class="modal" id="alert">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <!-- Modal Header -->
-          <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-    
-          <!-- Modal body -->
-          <div class="modal-body">
-            <div class="alert alert-success">
-              <span>Chỉnh sửa thông tin sản phẩm thành công!</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- The Modal Delete Product -->
-    <div class="modal" id="delete_prod">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <!-- Modal Header -->
-          <div class="modal-header">
-            <h4 class="modal-title">Xóa sản phẩm</h4>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-    
-          <!-- Modal body -->
-          <div class="modal-body">
-            <form>Chi tiết sản phẩm muốn xóa</form>
-          </div>
-    
-          <!-- Modal footer -->
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#delete_success">
-              <span>Đồng ý</span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- The Modal Delete Product Success -->
-    <div class="modal" id="delete_success">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <!-- Modal Header -->
-          <div class="modal-header">
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-    
-          <!-- Modal body -->
-          <div class="modal-body">
-            <div class="alert alert-success">
-              <span>Xóa sản phẩm thành công!</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <!-- The Modal Detail Product -->
-    <div class="modal" id="detail_prod">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <!-- Modal Header -->
-          <div class="modal-header">
-            <h4 class="modal-title">Tên sản phẩm</h4>
-            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
-    
-          <!-- Modal body -->
-          <div class="modal-body">
-            <form>Chi tiết sản phẩm</form>
-          </div>
-        </div>
       </div>
     </div>
